--- a/Java/Reto 3.2/.vscode/launch.json
+++ b/Java/Reto 3.2/.vscode/launch.json
@@ -4,9 +4,8 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
-    
-        
+
+
         {
             "type": "java",
             "name": "Launch Current File",
@@ -19,7 +18,7 @@
             "request": "launch",
             "vmArgs": "--module-path C:/Users/willy/Downloads/javafx-sdk-11.0.2/lib --add-modules=javafx.controls,javafx.fxml",
             "mainClass": "App",
-            "projectName": "Proyectos Willy_e0f54973"
+            "projectName": "Reto 3.2_2ddbdfb6"
         }
     ]
 }
