--- a/Java/Reto 3.2/.vscode/settings.json
+++ b/Java/Reto 3.2/.vscode/settings.json
@@ -1,16 +1,13 @@
 {
-  "java.project.referencedLibraries": {
-    "include": [
-      "lib/**/*.jar",
-      "c:\\Users\\willy\\Desktop\\Willy\\ProyectosWilly\\Java\\Librerias\\javafx-sdk-16\\lib\\javafx.base.jar",
-      "c:\\Users\\willy\\Desktop\\Willy\\ProyectosWilly\\Java\\Librerias\\javafx-sdk-16\\lib\\javafx.controls.jar",
-      "c:\\Users\\willy\\Desktop\\Willy\\ProyectosWilly\\Java\\Librerias\\javafx-sdk-16\\lib\\javafx.fxml.jar",
-      "c:\\Users\\willy\\Desktop\\Willy\\ProyectosWilly\\Java\\Librerias\\javafx-sdk-16\\lib\\javafx.graphics.jar",
-      "c:\\Users\\willy\\Desktop\\Willy\\ProyectosWilly\\Java\\Librerias\\javafx-sdk-16\\lib\\javafx.media.jar",
-      "c:\\Users\\willy\\Desktop\\Willy\\ProyectosWilly\\Java\\Librerias\\javafx-sdk-16\\lib\\javafx.swing.jar",
-      "c:\\Users\\willy\\Desktop\\Willy\\ProyectosWilly\\Java\\Librerias\\javafx-sdk-16\\lib\\javafx.web.jar",
-      "c:\\Users\\willy\\Desktop\\Willy\\ProyectosWilly\\Java\\Librerias\\javafx-sdk-16\\lib\\javafx-swt.jar"
-    ],
-    
-  }
+  "java.project.referencedLibraries": [
+    "lib/**/*.jar",
+    "c:\\Users\\willy\\Desktop\\Willy\\ProyectosWilly\\Java\\Librerias\\javafx-sdk-16\\lib\\javafx.base.jar",
+    "c:\\Users\\willy\\Desktop\\Willy\\ProyectosWilly\\Java\\Librerias\\javafx-sdk-16\\lib\\javafx.controls.jar",
+    "c:\\Users\\willy\\Desktop\\Willy\\ProyectosWilly\\Java\\Librerias\\javafx-sdk-16\\lib\\javafx.fxml.jar",
+    "c:\\Users\\willy\\Desktop\\Willy\\ProyectosWilly\\Java\\Librerias\\javafx-sdk-16\\lib\\javafx.graphics.jar",
+    "c:\\Users\\willy\\Desktop\\Willy\\ProyectosWilly\\Java\\Librerias\\javafx-sdk-16\\lib\\javafx.media.jar",
+    "c:\\Users\\willy\\Desktop\\Willy\\ProyectosWilly\\Java\\Librerias\\javafx-sdk-16\\lib\\javafx.swing.jar",
+    "c:\\Users\\willy\\Desktop\\Willy\\ProyectosWilly\\Java\\Librerias\\javafx-sdk-16\\lib\\javafx.web.jar",
+    "c:\\Users\\willy\\Desktop\\Willy\\ProyectosWilly\\Java\\Librerias\\javafx-sdk-16\\lib\\javafx-swt.jar"
+  ]
 }
